--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="flex gap-1">
+    <a href="#" class="btn btn-sm">Login</a>
+    <a href="#" class="btn btn-md">Login</a>
+    <button href="#" class="btn btn-lg">Login</button>
+</div>
+
+<div class="flex gap-1">
+    <a aria-label="Login" href="#" class="btn btn-sm"></a>
+    <a aria-label="Login" href="#" class="btn btn-md"></a>
+    <button aria-label="Login" href="#" class="btn btn-lg"></button>
+</div>
 
 </body>
 </html>
