--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="flex gap-1">
-    <a href="#" class="btn btn-sm">Login</a>
-    <a href="#" class="btn btn-md">Login</a>
-    <button href="#" class="btn btn-lg">Login</button>
-</div>
-
-<div class="flex gap-1">
-    <a aria-label="Login" href="#" class="btn btn-sm"></a>
-    <a aria-label="Login" href="#" class="btn btn-md"></a>
-    <button aria-label="Login" href="#" class="btn btn-lg"></button>
-</div>
-
+    <header>
+        <div class="container py-base">
+            <nav class="flex items-center gap-1.5" >
+                <a href="#">
+                    <img src="assets/icons/Logo.svg" alt="logo zingen">
+                </a>
+                <a href="#about" class="desktop-only">Conheça o app</a>
+                <a href="#features" class="desktop-only">Funcionalidades</a>
+                <a href="#pricing" class="desktop-only">Planos e preços</a>
+                <a href="#download" class="btn btn-sm">Baixar Agora</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
