--- a/index.html
+++ b/index.html
@@ -24,5 +24,16 @@
             </nav>
         </div>
     </header>
+    <section id="hero">
+        <div class="containerpy-lg">
+            <img src="assets/icons/music_bar.svg" alt="imagem music bar">
+            <h1>Quem canta seus males espanta</h1>
+            <p>Cantar nunca foi tão fácil</p>
+            <div class="buttons flex items-center gap-1">
+                <a href="#planos" aria-label="Planos" class="btn btn-md"></a>
+                <a href="#download" class="btn btn-md">Baixar Agora</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
