--- a/index.html
+++ b/index.html
@@ -35,5 +35,27 @@
             </div>
         </div>
     </section>
+    <section id="smartphones-img">
+        <div class="container">
+            <img src="assets/images/smartphones.png" alt="imagem de smartphones">
+        </div>
+    </section>
+    <section id="about">
+        <div class="container even-columns py-xl items-center">
+            <div>
+                <header>
+                    <strong>Conheça o app</strong>
+                    <h2>Com o Zingen você pode cantar suas músicas favoritas e compartilhar com seus amigos</h2>
+                </header>
+                <p>Nosso algoritmo de Inteligência Artificial permite remover a voz original e manter as melodias das músicas. Dessa forma, temos o maior repertório musical para Karaokê! Além disso, ao cantar, sua voz e afinação é comparada pelo algoritmo permitindo uma avaliação precisa da sua performance te ajudando a melhorar seu canto. </p>
+            </div>
+            <div>
+                <img class="desktop-only" src="assets/images/smartphones.png" alt="imagem de smartphones">
+            </div>
+        </div>
+    </section>
+
+
+
 </body>
 </html>
